# serializer version: 1
# name: test_filters_error_prop[path_filter]
  WithNested(
    include_me='prop value',
    nested=CustomClass(
      include_me='prop value',
    ),
  )
# ---
# name: test_filters_error_prop[prop_filter]
  WithNested(
    include_me='prop value',
    nested=CustomClass(
      include_me='prop value',
    ),
  )
# ---
# name: test_filters_expected_paths
  dict({
    'list': list([
      2,
    ]),
    'nested': dict({
      'other': 'value',
    }),
  })
# ---
# name: test_filters_expected_props
  dict({
    'list': list([
      2,
    ]),
    'nested': dict({
      'other': 'value',
    }),
  })
# ---
# name: test_includes_nested_path
  dict({
    'include-me': False,
    'layer1': dict({
      'layer2': list([
        True,
      ]),
    }),
  })
# ---
# name: test_only_includes_expected_props
  dict({
    'date': 'utc',
    0: 'some value',
  })
# ---
# name: test_only_includes_expected_props.1
  dict({
    'date': 'utc',
    'nested': dict({
      'id': 4,
    }),
    0: 'some value',
  })
# ---
